AArch64: -XX:-UseOnStackReplacement does not work together with -XX:+TieredCompilation

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P5
    • 11
    • Affects Version/s: 9, 10
    • Component/s: hotspot
    • b07
    • aarch64
    • linux

      Hotspot patch [1] introduces a test case
      hotspot/test/compiler/interpreter/DisableOSRTest.java which also
      exposes the same issue on aarch64.

      I.e. with -XX:-UseOnStackReplacement and -XX:+TieredCompilation
      options, there are still OSR compilations found from
      -XX:+PrintCompilation.

      [1] http://hg.openjdk.java.net/jdk9/hs-comp/hotspot/rev/fd222df9f27c
      [2] http://hg.openjdk.java.net/aarch64-port/jdk8/hotspot/rev/18e5cbbe8abf

            Assignee:
            Ningsheng Jian (Inactive)
            Reporter:
            Ningsheng Jian (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: