8173100: AArch64: -XX:-UseOnStackReplacement does not work together with -XX:+TieredCompilation

Fix hotspot jtreg test compiler/interpreter/DisableOSRTest.java failure on AArch64.

Reviewed-by: aph, fyang